--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "24.0.10",
     "@types/node": "11.10.5",
     "@types/react": "16.8.7",
     "@types/react-bootstrap": "^0.32.17",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
