--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/react": "16.8.7",
     "@types/react-bootstrap": "^0.32.17",
     "@types/react-dom": "16.8.2",
+    "@types/react-redux": "^7.0.3",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "node-sass": "^4.11.0",
@@ -17,8 +20,11 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-canvas-nest": "^1.0.10",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.3.3333"
   },
   "scripts": {
