--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "mock": "json-server db.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +42,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/json-server": "^0.14.0",
+    "@types/mockjs": "^1.0.2",
+    "json-server": "^0.14.2",
+    "mockjs": "^1.0.1-beta3"
+  }
 }
