--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
@@ -24,6 +25,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typescript": "3.3.3333"
   },
