--- a/PTTWeb/package.json
+++ b/PTTWeb/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
