--- a/PTTWeb/package.json
+++ b/PTTWeb/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.7",
     "@types/react-bootstrap": "^0.32.17",
     "@types/react-dom": "16.8.2",
+    "@types/react-paginate": "^6.2.1",
     "@types/react-redux": "^7.0.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/redux": "^3.6.0",
@@ -18,13 +19,17 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
+    "rc-datetime-picker": "^1.6.1",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-canvas-nest": "^1.0.10",
     "react-dom": "^16.8.4",
+    "react-paginate": "^6.3.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-widgets": "^4.4.10",
+    "react-widgets-moment": "^4.0.26",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
